# SemiAutomatedUCProg

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  platformio.ini  sdkconfig.defaults
app/: server.js
app/public/: app.js  index.html  styles.css
boards/: esp32-p4-function-ev-board.json
docs/: dhcp-and-local-test.md  operator-dashboard-plan.md  three-uc-workflow.md  wiring.md
scripts/: broadcast-uc-console.cmd  broadcast-uc-console.ps1  open-uc-sessions.cmd  open-uc-sessions.ps1  start-uc-cockpit.cmd  start-uc-cockpit.ps1  uc-operator-console.cmd  uc-operator-console.ps1  uc-split-console.cmd  uc-split-console.ps1
src/: CMakeLists.txt  idf_component.yml  main.cpp  probe_espidf.c  proxy_main.c  usb_update_msc.c  usb_update_msc.h
